[GIP-798] added PutViewRequest support
